--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,6 @@
     <title>Contact me</title>
 </head>
 <body>
-    
+    <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium, reprehenderit fugit? Fugit est dignissimos officiis voluptatibus nobis dolorem aliquid nesciunt!</h1>
 </body>
 </html>
