--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="styleContact.css">
     <title>Contact me</title>
 </head>
 <body>
@@ -28,7 +29,7 @@
         </div>
     </nav>
 
-    <form class="col-md-8">
+    <form class="col-md-8 offset-2">
         <div class="form-group">
           <label for="exampleInputEmail1"><strong>Email address</strong></label>
           <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
