adding changes to portfolio

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <title>Document</title>
+    <title>Portfolio</title>
 </head>
 <body>
 
@@ -29,55 +29,61 @@
     </nav>
 
 
-    <div class="card-deck col-md-10 offset-2">
+    <div class="card-deck col-md offset-4" id="row1">
         <div class="card">
           <img src="..." class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <h5 class="card-title">First project</h5>
+            <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit, doloremque.</p>
+            <p class="card-text"><small class="text-muted">Lorem ipsum dolor sit amet.</small></p>
           </div>
         </div>
         <div class="card">
           <img src="..." class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <h5 class="card-title">Second Project</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos, possimus? Eveniet esse nisi voluptas voluptatum?</p>
+            <p class="card-text"><small class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, vel.</small></p>
           </div>
         </div>
         <div class="card">
           <img src="..." class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <h5 class="card-title">Third Project</h5>
+            <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id veritatis cum sunt. Molestias, tempore debitis.</p>
+            <p class="card-text"><small class="text-muted">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit, nesciunt?</small></p>
           </div>
         </div>
       </div>
-      <div class="card-deck col-md-10 offset-2" id="">
+      <div class="card-deck col-md offset-4" id="row2">
         <div class="card">
           <img src="..." class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <h5 class="card-title">Fourth Project</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius, consequatur.</p>
+          </div>
+          <div class="card-footer">
+            <small class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, eligendi?</small>
           </div>
         </div>
         <div class="card">
           <img src="..." class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <h5 class="card-title">Fifth Project</h5>
+            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea, rerum quod? Pariatur dicta deserunt minus!</p>
+          </div>
+          <div class="card-footer">
+            <small class="text-muted">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi, hic.</small>
           </div>
         </div>
         <div class="card">
           <img src="..." class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <h5 class="card-title">Sixth Project</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur, soluta.</p>
+          </div>
+          <div class="card-footer">
+            <small class="text-muted">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione, voluptatum!</small>
           </div>
         </div>
       </div>
