Put text on buttons

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -18,10 +18,10 @@
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                     <li class="nav-item">
-                         <a class="nav-link" href="#">About</a>
+                         <a class="nav-link" href="index.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Portfolio</a>
+                        <a class="nav-link" href="Portfolio.html">Portfolio</a>
                     </li>
                 </ul>
         
@@ -31,60 +31,57 @@
 
     <div class="card-deck col-md offset-4" id="row1">
         <div class="card">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="https://upload.wikimedia.org/wikipedia/en/thumb/4/44/SpongeBob_SquarePants_characters_promo.png/370px-SpongeBob_SquarePants_characters_promo.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">First project</h5>
             <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit, doloremque.</p>
             <p class="card-text"><small class="text-muted">Lorem ipsum dolor sit amet.</small></p>
+            <button type="button" class="btn btn-primary">View Project</button>
           </div>
         </div>
         <div class="card">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="https://upload.wikimedia.org/wikipedia/en/thumb/4/44/SpongeBob_SquarePants_characters_promo.png/370px-SpongeBob_SquarePants_characters_promo.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Second Project</h5>
             <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos, possimus? Eveniet esse nisi voluptas voluptatum?</p>
             <p class="card-text"><small class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, vel.</small></p>
+            <button type="button" class="btn btn-primary">View Project</button>
           </div>
         </div>
         <div class="card">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="https://upload.wikimedia.org/wikipedia/en/thumb/4/44/SpongeBob_SquarePants_characters_promo.png/370px-SpongeBob_SquarePants_characters_promo.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Third Project</h5>
             <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id veritatis cum sunt. Molestias, tempore debitis.</p>
             <p class="card-text"><small class="text-muted">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit, nesciunt?</small></p>
+            <button type="button" class="btn btn-primary">View Project</button>
           </div>
         </div>
       </div>
       <div class="card-deck col-md offset-4" id="row2">
         <div class="card">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="https://upload.wikimedia.org/wikipedia/en/thumb/4/44/SpongeBob_SquarePants_characters_promo.png/370px-SpongeBob_SquarePants_characters_promo.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Fourth Project</h5>
             <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius, consequatur.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, eligendi?</small>
+            <button type="button" class="btn btn-primary">View Project</button>
           </div>
         </div>
         <div class="card">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="https://upload.wikimedia.org/wikipedia/en/thumb/4/44/SpongeBob_SquarePants_characters_promo.png/370px-SpongeBob_SquarePants_characters_promo.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Fifth Project</h5>
             <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea, rerum quod? Pariatur dicta deserunt minus!</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi, hic.</small>
+            <button type="button" class="btn btn-primary">View Project</button>
           </div>
         </div>
         <div class="card">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="https://upload.wikimedia.org/wikipedia/en/thumb/4/44/SpongeBob_SquarePants_characters_promo.png/370px-SpongeBob_SquarePants_characters_promo.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Sixth Project</h5>
             <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur, soluta.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione, voluptatum!</small>
-          </div>
+            <button type="button" class="btn btn-primary">View Project</button>
+          </div>            
         </div>
       </div>
       
