--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
                          <a class="nav-link" href="index.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Portfolio</a>
+                        <a class="nav-link" href="Portfolio.html">Portfolio</a>
                     </li>
                 </ul>
         
